# go-watch

./: Cargo.toml  config.go  go.mod  go.sum  main.go  readme.md  rustfmt.toml  watch.go
css/: index.css  main.css  room.css
html/: index.html  room.gohtml  watch.gohtml
js/: index.js  main.js  room.js
src/: avatars.rs  config.rs  data.rs  main.rs
src/api/: mod.rs  room.rs  search.rs
static/css/: index.css  main.css  room.css
static/js/: index.js  main.js  room.js
storage/: userimages.go
templates/: index.html  room.html
