[package]
name = "watch-rs"
version = "0.1.0"
authors = ["kraxarn <me@kraxarn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^2.0"
actix-rt = "^1.0"
actix-files = "^0.2"
askama = "^0.9"
rand = "^0.7"
env_logger = "^0.7"

[build-dependencies]
askama = "^0.9"