[package]
name = "watch-rs"
version = "0.1.0"
authors = ["kraxarn <me@kraxarn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.9"
actix-web = "^2.0"
actix-rt = "^1.0"
actix-files = "^0.2"
actix-identity = "^0.2"
actix-web-actors = "^2.0"
askama = "^0.9"
rand = "^0.7"
env_logger = "^0.7"
lazy_static = "^1.4"
serde_json = "^1.0"
dirs = "^3.0"
futures = "^0.3"

[build-dependencies]
askama = "^0.9"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.uuid]
version = "^0.8"
features = ["serde", "v4"]

[dependencies.chrono]
version = "^0.4"
features = ["serde"]

[dependencies.reqwest]
version = "^0.10"
features = ["json"]

[dependencies.tokio]
version = "^0.2"
features = ["full"]